fix(main): correct light and dark mode

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,8 +5,8 @@
     color-scheme: light dark;
 
     /* --fg1: #c8c093; */
-    --fg: #dcd7ba;
-    --bg: #090618;
+    --bg: #dcd7ba;
+    --fg: #090618;
     --fonx: VT323, monospace;
     /* --current-page: #957fb8; */
     --link: #7e9cd8;
